<resources>
    <string name="app_name">MyCalculator</string>

    <string name="hello_world"> A simple calculator </string>
    // <string name="second_page"> Welcome to the second page! </string>
    <string name="action_settings"> Settings </string>
    <string name="btn0"> 0 </string>
    <string name="btn1"> 1 </string>
    <string name="btn2"> 2 </string>
    <string name="btn3"> 3 </string>
    <string name="btn4"> 4 </string>
    <string name="btn5"> 5 </string>
    <string name="btn6"> 6 </string>
    <string name="btn7"> 7 </string>
    <string name="btn8"> 8 </string>
    <string name="btn9"> 9 </string>
    <string name="btnDot"> . </string>
    <string name="btnAdd"> + </string>
    <string name="btnSub"> - </string>
    <string name="btnMul"> * </string>
    <string name="btnDiv"> / </string>
    <string name="btnEq"> = </string>
    <string name="btnC"> C </string>
    <color name="grey">#827f78</color>
    <color name="pinky">#cd60d1</color>
    <color name="bluey"> #5aa3d1</color>
    <color name="black">#000000</color>
    <color name="white"> #ffffff</color>
</resources>
